--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6",
-    "next-auth": "5.0.0"
+    "next": "15.4.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
